Implementation Algorithm MarkovChain and  improvements GeneratedLevel